# wgpu_graphics

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: colored_image_test.rs  draw_state.rs  example.rs  nested_clipping.rs  test.rs  text_test.rs  texture_wrap.rs
examples/include/: mod.rs
src/: colored.wgsl  lib.rs  shader.wgsl  textured.wgsl
