[package]
name = "piston2d-wgpu_graphics"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = [
    "shinmili"
]
keywords = ["wgpu", "graphics", "2d", "piston"]
description = "A WGPU 2D back-end for the Piston game engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/wgpu_graphics.git"
homepage = "https://github.com/PistonDevelopers/wgpu_graphics"
documentation = "https://docs.rs/piston2d-wgpu_graphics"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wgpu_graphics"

[dev-dependencies]
find_folder = "0.3"
futures = "0.3"
piston = "0.53"
pistoncore-winit_window = { git = "https://github.com/shinmili/winit_window", branch = "feature/winit-0.25" }

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.23.14"
piston-texture = "0.8.0"
piston2d-graphics = { version = "0.40.0", features = ["glyph_cache_rusttype"] }
wgpu = "0.10"
