[package]
name = "piston2d-wgpu_graphics"
version = "0.9.0"
edition = "2018"
resolver = "2"
authors = ["shinmili"]
keywords = ["wgpu", "graphics", "2d", "piston"]
description = "A WGPU 2D back-end for the Piston game engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/wgpu_graphics.git"
homepage = "https://github.com/PistonDevelopers/wgpu_graphics"
documentation = "https://docs.rs/piston2d-wgpu_graphics"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wgpu_graphics"

[dev-dependencies]
find_folder = "0.3"
futures = "0.3"
piston = "0.54.0"
pistoncore-winit_window = "0.16.0"

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.24.1"
piston-texture = "0.9.0"
piston2d-graphics = { version = "0.44.0", features = ["glyph_cache_rusttype"] }
wgpu = "0.17.0"
