[package]
name = "piston2d-wgpu_graphics"
version = "0.12.0"
edition = "2024"
authors = [
  "shinmili",
  "Sven Nilsen <bvssvni@gmail.com",
]
keywords = ["wgpu", "graphics", "2d", "piston"]
description = "A WGPU 2D back-end for the Piston game engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/wgpu_graphics.git"
homepage = "https://github.com/PistonDevelopers/wgpu_graphics"
documentation = "https://docs.rs/piston2d-wgpu_graphics"
exclude = ["assets/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wgpu_graphics"

[dev-dependencies]
find_folder = "0.3"
futures = "0.3"
piston = "1.0.0"
pistoncore-winit_window = "0.19.0"

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.25.1"
piston-texture = "0.9.0"
piston2d-graphics = { version = "0.45.0", features = ["glyph_cache_rusttype"] }
wgpu = "27.0.1"
